--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
       </div>
       <div style="height: 200px" class="mg" align="center">
         <h1><b>寝室记忆</b></h1>
-        <p class="wrapper">无</p>
+        <p class="wrapper">
+          无
+          <img src="tupian\IMG_20240615_190508.jpg" alt="e" height="60px" />
+        </p>
       </div>
       <div style="height: 200px" class="mg" align="center"></div>
     </div>
