--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
     <div class="flex mg">
       <div style="height: 200px" class="mg" align="center">
         <h1><b>校园往事</b></h1>
-        <p1 class="wrapper">暂无</p1>
+        <p1 class="wrapper"
+          >
+          <img src="tupian\微信图片_20240808163715.jpg" alt="无" height="60px" />
+        </p1>
       </div>
       <div style="height: 200px" class="mg" align="center">
         <h1><b>寝室记忆</b></h1>
         <p class="wrapper">
-          无
-          <img src="tupian\IMG_20240615_190508.jpg" alt="e" height="60px" />
+          
+          <img src="tupian\微信图片_20240808163718.jpg" alt="e" height="60px" />
         </p>
-      </div>
-      <div style="height: 200px" class="mg" align="center"></div>
-    </div>
   </body>
 </html>
