--- a/index.html
+++ b/index.html
@@ -27,22 +27,23 @@
   </head>
   <body class="flex">
     <div class="zihao mg" align="center">
-      <p><b>扶摇直上202</b></p>
-      <img src="./IMG_20240615_190504.jpg" alt="" />
+      <p><b>火箭101</b></p>
+      <img />
+    </div>
+    <div style="height: 200px;" class="mg">
+      <h1 align="center">寝室成员</h1>
     </div>
     <div class="flex mg">
       <div style="height: 200px" class="mg" align="center">
-        <h1><b>校园往事</b></h1>
+        <h1><b>初入校园</b></h1>
         <p1 class="wrapper"
           >
-          <img src="tupian\微信图片_20240808163715.jpg" alt="无" height="60px" />
+          <img src="101\b31c622ec4cfc0c3cb771743bbde747.jpg" alt="无" height="80px" />
         </p1>
       </div>
       <div style="height: 200px" class="mg" align="center">
         <h1><b>寝室记忆</b></h1>
         <p class="wrapper">
-          
-          <img src="tupian\微信图片_20240808163718.jpg" alt="e" height="60px" />
         </p>
   </body>
 </html>
