--- a/index.html
+++ b/index.html
@@ -21,29 +21,23 @@
       }
       .wrapper {
         display: flex;
-        justify-content: flex-start;
       }
     </style>
   </head>
   <body class="flex">
-    <div class="zihao mg" align="center">
-      <p><b>火箭101</b></p>
-      <img />
-    </div>
-    <div style="height: 200px;" class="mg">
-      <h1 align="center">寝室成员</h1>
-    </div>
-    <div class="flex mg">
-      <div style="height: 200px" class="mg" align="center">
-        <h1><b>初入校园</b></h1>
-        <p1 class="wrapper"
-          >
-          <img src="101\b31c622ec4cfc0c3cb771743bbde747.jpg" alt="无" height="80px" />
-        </p1>
-      </div>
-      <div style="height: 200px" class="mg" align="center">
-        <h1><b>寝室记忆</b></h1>
-        <p class="wrapper">
-        </p>
+    <h1>互联网上的一个小小痕迹</h1>
+    <p>
+      &ensp;
+      &ensp;我叫JUN，来自一个小县城。在过去的十几年中对电脑接触最多也许就是4399了。在高中，勉强上了几节正经的计算机课。
+      突然，我萌生出一个想法。似乎我会的只是使用电脑上的程序，而不是真正的使用电脑。可是高三呐高三，高悬的学习足够占据
+      我全部的思维空间了。
+    </p>
+    <p2>
+      &ensp;&ensp;高考结束，似乎没有想象中中的开心。没有卸下重负之后，与其说是轻松感，倒不如说是一种瘫软的感觉。考试，
+      焦急，出分，难受，报考，做完这一切的我仿佛真正的和过去说再见了。是吗？也许是吧。
+    </p2>
+    <p3>
+      &ensp;&ensp;非常高兴，我拥有了一台属于自己的电脑，感谢老哥！
+    </p3>
   </body>
 </html>
