--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
       .zihao {
         font-size: 200%;
       }
-      * {
-        border: 1px solid;
-      }
+      
       .mg {
         margin: 8px;
       }
@@ -36,8 +34,8 @@
       &ensp;&ensp;高考结束，似乎没有想象中中的开心。没有卸下重负之后，与其说是轻松感，倒不如说是一种瘫软的感觉。考试，
       焦急，出分，难受，报考，做完这一切的我仿佛真正的和过去说再见了。是吗？也许是吧。
     </p2>
-    <p3>
-      &ensp;&ensp;非常高兴，我拥有了一台属于自己的电脑，感谢老哥！
-    </p3>
+    <p3> &ensp;&ensp;&ensp;&ensp;  非常高兴，我拥有了一台属于自己的电脑，感谢老哥！在暑假，开始广泛的学习各种电脑知识。
+      虽说学的不是很精，但也对电脑有了不一样的认识。在学习过程中，我对互联网分享精神感到深深的敬佩。网上的免费教程、开源代码
+    何其之多。感谢为爱发电的所有互联网人。 </p3>
   </body>
 </html>
